[gd_scene format=3 uid="uid://b4pn8kf4da1ac"]

[ext_resource type="Texture2D" uid="uid://dosuaffesengn" path="res://pics/Bot1.png" id="1_3tvf7"]
[ext_resource type="Script" uid="uid://c1cpt0t1lqo2g" path="res://bot_1.gd" id="1_su4po"]
[ext_resource type="Texture2D" uid="uid://dvyuqr7k5ufia" path="res://pics/Bot2.png" id="2_vhyuu"]
[ext_resource type="Texture2D" uid="uid://btxj263o6244j" path="res://pics/Bot3.png" id="3_csvf6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_y0qfv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3tvf7")
}, {
"duration": 1.0,
"texture": ExtResource("2_vhyuu")
}, {
"duration": 1.0,
"texture": ExtResource("3_csvf6")
}, {
"duration": 1.0,
"texture": ExtResource("2_vhyuu")
}],
"loop": true,
"name": &"bot1",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_87lvn"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lydp7"]
radius = 693.33325

[sub_resource type="CircleShape2D" id="CircleShape2D_jaqqm"]
radius = 53.3333

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_va6o1"]
properties/0/path = NodePath(".:speed")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Bot1" type="CharacterBody2D" unique_id=669922890]
position = Vector2(280, 440)
collision_layer = 2
collision_mask = 8
script = ExtResource("1_su4po")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1516785850]
position = Vector2(0, -1.00136e-05)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_y0qfv")
animation = &"bot1"
frame_progress = 0.000779555

[node name="EatArea2D" type="Area2D" parent="." unique_id=428002434]
scale = Vector2(0.3, 0.3)
collision_layer = 0
collision_mask = 5

[node name="EatCollisionShape2D" type="CollisionShape2D" parent="EatArea2D" unique_id=545113874]
light_mask = 5
visibility_layer = 512
position = Vector2(26.666687, 0)
shape = SubResource("CircleShape2D_87lvn")

[node name="DetectorArea2D" type="Area2D" parent="." unique_id=1218062734]
scale = Vector2(0.3, 0.3)
collision_layer = 0
collision_mask = 5

[node name="DetectorCollisionShape2D" type="CollisionShape2D" parent="DetectorArea2D" unique_id=1226139588]
light_mask = 5
visibility_layer = 512
position = Vector2(560, 0)
shape = SubResource("CircleShape2D_lydp7")
debug_color = Color(0.771064, 0.344065, 0.719909, 0.42)

[node name="BotCollisionShape2D" type="CollisionShape2D" parent="." unique_id=2003595307]
light_mask = 10
visibility_layer = 2
position = Vector2(8, 0)
scale = Vector2(0.3, 0.3)
shape = SubResource("CircleShape2D_jaqqm")
debug_color = Color(0.160444, 0.624201, 0.462746, 0.42)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." unique_id=1423019953]
replication_config = SubResource("SceneReplicationConfig_va6o1")

[connection signal="body_entered" from="EatArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="DetectorArea2D" to="." method="_on_detector_area_2d_body_entered"]
[connection signal="body_exited" from="DetectorArea2D" to="." method="_on_detector_area_2d_body_exited"]
